refactor: 보드 초기화 시 상차림 타입 변경